fixed disalignment of boxes and header around 1200px, added breitum í header

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,4 +1,13 @@
 $gutter: 20px;
+$black: #000000;
+$white: #ffffff;
+$red: #cc9694;
+$yellow: #fcffd2;
+$green: #afb281;
+$blue: #cee8ff;
+$font_family_1: 'Open Sans', helvetica, arial, sans-serif;
+$font_family_2: 'Oswald', Verdana, sans-serif;
+
 @mixin col($width: 100%) {
   width: $width;
   padding-right: 10px;
@@ -11,7 +20,7 @@ $gutter: 20px;
 }
 
 .header {
-  background-color: #afb281;
+  background-color: $green;
 
   &__container {
     display: flex;
@@ -26,7 +35,7 @@ $gutter: 20px;
     flex-direction: column;
     align-items: center;
 
-    @media (min-width: 1180px) {
+    @media (min-width: 1223px) {
       padding: 0;
       margin-right: auto;
       margin-left: auto;
@@ -36,6 +45,7 @@ $gutter: 20px;
   &__headline {
     margin: auto;
     font-size: 60px;
+    font-family: $font_family_1;
   }
 
   &__nav {
@@ -52,6 +62,7 @@ $gutter: 20px;
       flex-direction: row;
     }
   }
+
 
   &__pages {
     display: flex;
@@ -77,5 +88,10 @@ $gutter: 20px;
     padding-right: ($gutter * 0.5);
     padding-left: ($gutter * 0.5);
     font-size: 21px;
+
+    &:hover {
+      color: $yellow;
+      transition: color 300ms ease-in-out;
+    }
   }
 }
