--- a/styles.scss
+++ b/styles.scss
@@ -25,13 +25,13 @@ html { /* stylelint-disable-line */
 
 main {
   margin: 0 auto;
-  max-width: 1220px;
+  max-width: 1200px;
 
   /*
   padding-right: 20px;
   padding-left: 20px;
   */
-  @media (min-width: 1200px) {
+  @media (min-width: 1220px) {
     padding-right: 0;
     padding-left: 0;
   }
